Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18111

Android: Debugger does not stop at cpp breakpoint

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.3.0-rc1
    • Qt Creator 4.3.0-beta1
    • Android Support
    • macOS 10.10, QC 4.3 snapshot

      Steps to reproduce:

      • have Android sdk/ndk/Qt for Android configured
      • create simple Qt Widget Application from template
      • set a breakpoint
      • build and debug the application on the simulator or on device
        • build & run seems fine, but I'm not able to stop at a breakpoint

      Note: Breakpoints seem to be not resolved (if looking at the Breakpoints widget)

      Note: Breakpoints inside Qml/JS code are hit [checked with Qt Quick Application, mixed debugging bp in cpp file and bp inside qml file; the latter one was hit]

      Additional note: tried to interrupt the app as stopping at bp did not work, but interrupting seems to fail as well (timed out, I tried with 'give gdb more time' but nothing happened afterwards.. not even a second timeout - had to abort this)

        1. debug.log
          61 kB
        2. debug_qtquickapp.log
          498 kB
        For Gerrit Dashboard: QTCREATORBUG-18111
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes