Android: Fix C++ debugging

Target Async mode enabled only for ndk version > 11

Task-number: QTCREATORBUG-18111
Change-Id: I218b6c23c1da13091f0035193a43e6117748055a
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>